triangle task done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triangle Area Calculator</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="">
+      <h1>Triangle Area Calculator</h1>
+    </div>
+
+    <form>
+      <div class="input-wrapper">
+        <label for="firstSide">FirstSide</label>
+        <input type="number" id="firstSide" />
+      </div>
+      <div class="input-wrapper">
+        <label for="secondSide">SecondSide</label>
+        <input type="number" id="secondSide" />
+      </div>
+      <div class="input-wrapper">
+        <label for="thirdSide">ThirdSide</label>
+        <input type="number" id="thirdSide" />
+      </div>
+      <br />
+      <button id="submit">Calculate</button>
+      <br /><br />
+      <div class="input-wrapper">
+        <label for="output">Area</label>
+        <input type="number" id="output" />
+      </div>
+    </form>
+    <!-- <div id="output"></div> -->
+    <script src="./script.js"></script>
+  </body>
 </html>
