--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="">
+      <div class="title">
         <h1>Triangle Area Calculator</h1>
       </div>
 
